# controllers/SessionSubject.js
@@ -7,25 +7,26 @@ const dao = new DAO();
 
 module.exports = {
     getSubjects: async(req, res, next) => {
-        console.log("getSubjects")
-        const session_id = req.session_id
-        const subjects = await dao.getSubjectsOfSession(session_id)
+        const {session_id} = req.query
+        console.log(`getSubjects for ${session_id}`)
+        const subjects = await dao.getSubjectsBySession(session_id)
+        res.header('Content-Type', 'application/json')
         res.end(JSON.stringify({subjects}))
     },
 
     addSessionSubject: async (req, res, next) => {
         console.log("addSessionSubject")
-        const subject = req.param('subject')
-        const session_id = req.param('session_id') 
-        const success = await dao.addSessionSubjectRelation(subject, session_id)
+        const {session_id, subject} = req.body
+        const success = await dao.addSessionSubjectRelation(session_id, subject)
+        res.header('Content-Type', 'application/json')
         res.end(JSON.stringify({success}))
     },
     
     removeSessionSubject: async (req, res, next) => {
-        console.log("addSessionSubject")
-        const subject = req.param('subject') 
-        const session_id = req.param('session_id')
-        const success = await dao.removeSessionSubjectRelation(subject, session_id)
+        console.log("delSessionSubject")
+        const {session_id, subject} = req.body
+        const success = await dao.removeSessionSubjectRelation(session_id, subject)
+        res.header('Content-Type', 'application/json')
         res.end(JSON.stringify({success}))
     }
 }
