# controllers/UserActions.js
@@ -6,25 +6,28 @@
 const DAO = require('../db/dao.js')
 const dao = new DAO();
 
-module.exports.addRemark = function addRemark (req, res, next) {
-  console.log("addRemark");
+module.exports = {
+  addRemark: async (req, res, next) => {
+    console.log("addRemark");
 
-  var session_id = req.param('session_id');
-  var remark = req.param('remark');
+    var session_id = req.param('session_id');
+    var remark = req.param('remark');
 
-  var success = dao.addRemarkToSession(user_id, session_id, remark);
-  console.log(success);
+    var success = await dao.addRemarkToSession(user_id, session_id, remark);
+    console.log(success);
 
-  res.end(JSON.stringify({'success': success}));
-};
+    res.header('Content-Type', 'application/json')
 
-module.exports.getRemarks = async function getSessionRemarks (req, res, next) {
-  console.log("getRemarks");
-
-  // get committee details - api call
-  const session_id = req.session_id;
-
-  const response = await dao.getRemarksOfSession(session_id);
-  res.end(JSON.stringify({'remarks': response.rows[0].text}));
-};
+    res.end(JSON.stringify({success}));
+  },
+  
+  getRemarks: async (req, res, next) => {
+    console.log("getRemarks");
+    // get committee details - api call
+    const session_id = req.session_id;
+    const response = await dao.getRemarksOfSession(session_id);
+    res.header('Content-Type', 'application/json')
+    res.end(JSON.stringify({'remarks': response.rows[0].text}));
+  }
+}
 
